--- a/package.json
+++ b/package.json
@@ -19,18 +19,18 @@
     "axios": "^1.3.4",
     "firebase": "^9.22.1",
     "framer-motion": "^10.12.16",
-    "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-infinite-scroller": "^1.2.6",
     "react-intersection-observer": "^9.4.3",
     "react-query": "^3.39.3",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
-    "@types/react": "^18.0.37",
+    "@types/react": "^18.2.8",
     "@types/react-dom": "^18.0.11",
     "@types/react-infinite-scroller": "^1.2.3",
     "@types/styled-components": "^5.1.26",
